--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "prettier": "^3.4.2"
+  },
+  "devDependencies": {
+    "@eslint/create-config": "^1.0.0",
+    "@eslint/js": "^9.17.0",
+    "eslint": "^8.57.1",
+    "globals": "^15.14.0"
   }
 }
